<resources>
    <string name="app_name">PasswordKeeper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_password">Добавить пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="url">URL</string>
    <string name="save">Сохранить</string>
    <string name="title">Название</string>
    <string name="password_error">Пароль не должен быть пустым</string>
    <string name="required_field">Поле не должно быть пустым</string>
    <string name="search">Поиск</string>
    <string name="error_password_not_found">Пользователь не найден</string>
    <string name="error_loading_failed">Ошибка при загрузке данных</string>
    <string name="delete">Удалить</string>
    <string name="capital_char">A-Z</string>
    <string name="digital_char">0-9</string>
    <string name="special_char">!@*</string>
    <string name="count_char">Количество символов</string>
    <string name="passwords">Пароли</string>
    <string name="password_copied">Пароль скопирован</string>
    <string name="min_char_field">Пароль должен содержать более 5 символов</string>
    <string name="max_char_field">Пароль не должен быть больше 16 символов</string>
    <string name="not_same_field">Пароль не совпадает</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_up">Регистарция</string>
    <string name="sign_in">Войти</string>
</resources>