<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_char"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/countCharText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="10dp"
        android:maxHeight="10dp"
        android:minWidth="5dp"
        android:valueFrom="5"
        android:valueTo="100"
        android:stepSize="1"
        app:labelBehavior="gone"
        app:tickVisible="false"
        app:layout_constraintTop_toBottomOf="@id/countCharText"
        app:thumbRadius="8dp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/buttonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uppercaseCharButton"
            android:layout_width="@dimen/wh_buttons"
            android:layout_height="@dimen/wh_buttons"
            style="@style/CustomMaterialButton"
            android:text="@string/capital_char" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/digitCharButton"
            android:layout_width="@dimen/wh_buttons"
            android:layout_height="@dimen/wh_buttons"
            style="@style/CustomMaterialButton"
            android:text="@string/digital_char"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/specialCharButton"
            android:layout_width="@dimen/wh_buttons"
            android:layout_height="@dimen/wh_buttons"
            style="@style/CustomMaterialButton"
            android:text="@string/special_char"
            android:checked="true"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>