<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerLinear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleContainer"
        style="@style/TextInputLayout.FilledBox.Custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/title"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginContainer"
        style="@style/TextInputLayout.FilledBox.Custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/TextInputLayout.FilledBox.Custom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toStartOf="@id/generatePasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginContainer"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/generatePasswordButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/dice"
        app:layout_constraintBottom_toBottomOf="@id/passwordContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordContainer"
        app:layout_constraintTop_toTopOf="@id/passwordContainer"
        app:tint="@color/white" />

    <FrameLayout
        android:id="@+id/passwordGeneratorContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/TextInputLayout.FilledBox.Custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordGeneratorContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlContainer"
        style="@style/TextInputLayout.FilledBox.Custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_edit_gradient"
        android:text="@string/save"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlContainer" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_delete_gradient"
        android:text="@string/delete"
        android:visibility="gone"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>

