<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.fragments.PasswordDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginBottom="8dp"
            style="@style/TextInputLayout.FilledBox.Custom"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            style="@style/TextInputLayout.FilledBox.Custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/TextInputLayout.FilledBox.Custom"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toStartOf="@id/generatePasswordButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginContainer"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/generatePasswordButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:src="@drawable/dice"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/passwordContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/passwordContainer"
            app:layout_constraintTop_toTopOf="@id/passwordContainer" />

        <include
            android:id="@+id/passwordGeneratorSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            layout="@layout/password_generator_settings"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/TextInputLayout.FilledBox.Custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordGeneratorSettings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/urlContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url"
            style="@style/TextInputLayout.FilledBox.Custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/urlEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/button_edit_gradient"
            app:backgroundTint="@null"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/urlContainer" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@drawable/button_delete_gradient"
            android:visibility="gone"
            app:backgroundTint="@null"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saveButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>