<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.SignUpFragment"
    android:background="@drawable/background_gradient">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconDrawable="@drawable/search_24"
        app:helperTextTextColor="@color/red"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/passwordConfirmContainer"
        style="@style/TextInputLayout.FilledBox.Custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordCreatingText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:endIconDrawable="@drawable/search_24"
        style="@style/TextInputLayout.FilledBox.Custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmText"
            android:hint="@string/repeat_password"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:background="@drawable/button_edit_gradient"
        app:helperTextTextColor="@color/red"
        app:backgroundTint="@null"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmContainer"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>